game-core/movement fix movement generator part1